fix(gamification): resolve test compilation errors